# sat-solver-simulated-annealing

./: CMakeLists.txt  notebook.ipynb
pokus1/: pozn.txt
pokus2/: pozn.txt
pokus3/: pozn.txt
pokus4/: pozn.txt
pokus5/: pozn.txt
src/: ArgGetter.cpp  Clause.cpp  Problem.cpp  ProblemFactory.cpp  Progress.cpp  Solution.cpp  State.cpp  main.cpp
src/headers/: ArgGetter.h  Clause.h  Problem.h  ProblemFactory.h  Progress.h  Solution.h  State.h
src/solvers/: Asolver.cpp  SASolver.cpp
src/solvers/headers/: ASolver.h  SASolver.h
